added validation for dates
