# backend/learning-api/app/Http/Controllers/CourseController.php
@@ -3,6 +3,7 @@
 namespace App\Http\Controllers;
 
 use App\Course;
+use App\Instructor;
 use Illuminate\Http\Request;
 /**
 * @OA\Info(title="API Course", version="1.0")
@@ -52,21 +53,29 @@ class CourseController extends Controller
         //
     }
     /**
-    * @OA\Post(
-    *     path="/api/courses",
-    *     tags={"CourseController"},
-    *     summary="Subir un curso",
-    *     @OA\Response(
-    *         response=200,
-    *         description="Ingresa un curso a la base de datos."
-    *     ),
-    *     @OA\Response(
-    *         response="default",
-    *         description="Ha ocurrido un error."
-    *     )
-    * )
-    */
-
+     * @OA\Post(
+     *     path="/api/courses",
+     *     tags={"CourseController"},
+     *     summary="Subir un curso",
+     *     @OA\RequestBody(
+     *       @OA\JsonContent(
+     *            type="object",
+     *            @OA\Property(property="name", type="string",example="Curso de Programacion"),
+     *            @OA\Property(property="duration", type="string",example="1h-30min"),
+     *            @OA\Property(property="start_date", type="date",example="29-12-2019"),
+     *            @OA\Property(property="instructor_id", type="string",example="61d2082c371e5949897a8fe5"),
+     *       )
+     *     ),
+     *     @OA\Response(
+     *         response=200,
+     *         description="Subir un curso a la base de datos."
+     *     ),
+     *     @OA\Response(
+     *         response="default",
+     *         description="Ha ocurrido un error."
+     *     )
+     * )
+     */
     /**
      * Store a newly created resource in storage.
      *
@@ -75,8 +84,22 @@ class CourseController extends Controller
      */
     public function store(Request $request)
     {
-        $course = Course::create($request->all());
-        return response()->json(array_merge(['status' => 'created'],$course));
+        $instructor_id = $request->input("instructor_id");
+        $instructor = Instructor::find($instructor_id);
+        $startDate = $request["start-date"];
+        
+        if(!$instructor)
+            return response()->json(['error' => 'failed searching instructor at DB','instructor_id' =>$instructor_id]);
+        
+        else if(!$instructor["courses"])
+            return $this->createCourse($request->all());
+
+        else if($this->validateDate($startDate,$instructor))
+            return $this->createCourse($request->all());
+        
+        else
+            return response()->json(['error' => 'failed create a course, there are match with dates in other courses for this instructor','instructor_id' =>$instructor_id]);
+        
     }
 
     /**
@@ -112,6 +135,7 @@ class CourseController extends Controller
     {
         //
     }
+    
 
     /**
      * Remove the specified resource from storage.
@@ -122,5 +146,74 @@ class CourseController extends Controller
     public function destroy(Course $course)
     {
         //
+    }
+
+
+    /**
+     * Search each course if has dates equals
+     *
+     * @param  \App\Instructor  $instructor
+     * @return boolean
+     */
+    public function validateDate( $date ,Instructor $instructor)
+    {
+        $courses = $instructor["courses"];
+
+        if(!$date || !$courses)
+            return false;
+
+        $hasRepeatDate = false;
+
+        foreach( $courses as $course ){
+
+            if($hasRepeatDate($date,$course)){
+                $hasRepeatDate=true;
+                break;
+            }
+        }
+        dd($hasRepeatDate); // this is for access it out of the loop.
+        return $hasRepeatDate;
+    }
+    /**
+     * Compare if course has same date
+     *
+     * @param  \App\Course  $course
+     * @return boolean
+     */
+    public function hasRepeat( $date ,Course $course)
+    {
+            
+        $foundCourse = Course::find($course["_id"]);
+
+        if(!$foundCourse)
+            return false;
+            
+        $startDate = $foundCourse["start-date"];
+
+        if(!$startDate)
+            return false;
+
+        if($startDate === $date)
+            return true;
+
+        return false;
+    }
+    /**
+     * Create a course and update courses of his instructor
+     *
+     * @param  \App\Course  $course
+     * @return \Illuminate\Http\Response
+     */
+    private function createCourse($course){
+        
+        $course_created = Course::create($course);
+
+        $instructor_id = $course["instructor_id"];
+
+        Instructor::where('_id', '=', $instructor_id)
+        
+        ->push('courses', array( '_id' => $course_created["_id"]));
+        
+        return $course_created;
     }
 }
